--- a/app/globals.css
+++ b/app/globals.css
@@ -134,6 +134,12 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-x-hidden;
+  }
+}
+
+@layer components {
+  .container {
+    @apply p-6 md:p-10 max-w-[1440px] m-auto;
   }
 }
